--- a/themes/zuzu/layouts/partials/script.html
+++ b/themes/zuzu/layouts/partials/script.html
@@ -1,15 +1,15 @@
-<script src="{{.Site.BaseURL}}js/vendor/jquery.min.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/vendor/bootstrap.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/vendor/feather.min.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/vendor/lottie-player.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/vendor/aos.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/vendor/progress-image.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/vendor/anime.min.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/vendor/jquery.min.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/vendor/bootstrap.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/vendor/feather.min.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/vendor/lottie-player.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/vendor/aos.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/vendor/progress-image.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/vendor/anime.min.js" type="text/javascript"></script>
 
-<script src="{{.Site.BaseURL}}js/spinner.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/counter.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/reveal.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}js/attribute.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/spinner.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/counter.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/reveal.js" type="text/javascript"></script>
+<script src="{{.Site.BaseURL}}/js/attribute.js" type="text/javascript"></script>
 <script>
   feather.replace();
   AOS.init({
