--- a/themes/zuzu/layouts/partials/script.html
+++ b/themes/zuzu/layouts/partials/script.html
@@ -1,15 +1,28 @@
-<script src="{{.Site.BaseURL}}/js/vendor/jquery.min.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/vendor/bootstrap.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/vendor/feather.min.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/vendor/lottie-player.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/vendor/aos.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/vendor/progress-image.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/vendor/anime.min.js" type="text/javascript"></script>
+<script src={{"/js/vendor/jquery.min.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/bootstrap.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/feather.min.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/lottie-player.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/aos.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/progress-image.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/anime.min.js" | absURL }} type="text/javascript"></script>
 
-<script src="{{.Site.BaseURL}}/js/spinner.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/counter.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/reveal.js" type="text/javascript"></script>
-<script src="{{.Site.BaseURL}}/js/attribute.js" type="text/javascript"></script>
+<script src={{"/js/spinner.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/attribute.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/counter.js" | absURL }} type="text/javascript"></script>
+<script src={{"/js/reveal.js" | absURL }} type="text/javascript"></script>
+
+<script src={{"/js/vendor/jquery.min.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/bootstrap.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/feather.min.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/lottie-player.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/aos.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/progress-image.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/vendor/anime.min.js" | relURL }} type="text/javascript"></script>
+
+<script src={{"/js/spinner.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/attribute.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/counter.js" | relURL }} type="text/javascript"></script>
+<script src={{"/js/reveal.js" | relURL }} type="text/javascript"></script>
 <script>
   feather.replace();
   AOS.init({
