--- a/themes/zuzu/layouts/partials/section/main/feature.html
+++ b/themes/zuzu/layouts/partials/section/main/feature.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <h3 class="section-subtitle">
-        <span class="highlight">주주 리걸에 대해 알려드릴게요!</span>
+        <span class="highlight">주주 리걸 영상으로 먼저 만나보세요!</span>
       </h3>
     </div>
     <div class="row down-sm-row-reverse justify-content-center">
