--- a/themes/zuzu/layouts/partials/header/header.html
+++ b/themes/zuzu/layouts/partials/header/header.html
@@ -40,4 +40,5 @@
           class="button button-small button-tertiary">{{.Site.Data.label.button.signup}}</button>
       </form>
     </div>
+  </div>
 </nav>
